--- a/app/src/main/res/layout/card_post.xml
+++ b/app/src/main/res/layout/card_post.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:padding="@dimen/common_spacing"
     tools:context=".activity.MainActivity">
 
@@ -17,7 +17,7 @@
         app:layout_constraintBottom_toBottomOf="@id/barrierTop"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@sample/posts.json/data/authorAvatar" />
+        tools:srcCompat = "@sample/posts.json/data/authorAvatar" />
 
     <TextView
         android:id="@+id/author"
@@ -71,7 +71,7 @@
 
 
 
-    <ImageView
+    <ImageButton
         android:id="@+id/like"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -94,7 +94,7 @@
         app:layout_constraintTop_toBottomOf="@id/content"
         tools:text="@sample/posts.json/data/numberOfLikes" />
 
-    <ImageView
+    <ImageButton
         android:id="@+id/share"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -126,7 +126,7 @@
         app:layout_constraintTop_toBottomOf="@id/content"
         tools:text="50" />
 
-    <ImageView
+    <ImageButton
         android:id="@+id/impression"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
