--- a/app/src/main/res/layout/card_post.xml
+++ b/app/src/main/res/layout/card_post.xml
@@ -110,7 +110,7 @@
 
         <androidx.constraintlayout.widget.Group
             android:id="@+id/videoGroup"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:visibility="visible"
             app:constraint_referenced_ids="play, videoCard, videoLink"
