--- a/app/src/main/res/layout/card_post.xml
+++ b/app/src/main/res/layout/card_post.xml
@@ -101,7 +101,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:contentDescription="@string/description_play_button"
-            android:icon="@drawable/ic_baseline_play_circle_filled_24"
+            app:icon="@drawable/ic_baseline_play_circle_filled_24"
             app:layout_constraintBottom_toTopOf="@id/videoLink"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
